fix magnetic and resize-overflow

--- a/src/UI/Components/Clan/Clan.css
+++ b/src/UI/Components/Clan/Clan.css
@@ -1,7 +1,12 @@
-#Clan {
-	position: absolute;
+:host {
 	top: 150px;
 	left: 150px;
+	width: 400px;
+	height: 317px;
+}
+
+#Clan {
+	position: absolute;
 	width: 400px;
 	height: 317px;
 }
